generated/checker-for-evaluation/generated/test-Misuse-ac19c4c3d02e19b365209d2cee409671e1fb66bb/build_logs/0/build_error_log3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::containsManualMultiplication(const clang::Expr*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:79: error: ‘const_iterator’ in ‘class clang::Stmt’ does not name a type
   55 |     ChildWithSizeOf = findSpecificTypeInChildren(BO, static_cast<clang::Stmt::const_iterator*>(nullptr));
      |                                                                               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:93: error: expected ‘>’ before ‘*’ token
   55 |     ChildWithSizeOf = findSpecificTypeInChildren(BO, static_cast<clang::Stmt::const_iterator*>(nullptr));
      |                                                                                             ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:93: error: expected ‘(’ before ‘*’ token
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:94: error: expected primary-expression before ‘>’ token
   55 |     ChildWithSizeOf = findSpecificTypeInChildren(BO, static_cast<clang::Stmt::const_iterator*>(nullptr));
      |                                                                                              ^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
